:bug:Bugfix(z-index): ajuste no style do alerta

--- a/app/static/loopple.css
+++ b/app/static/loopple.css
@@ -241,3 +241,6 @@ footer.footer {
 .hidden {
     display: none !important;
 }
+.swal2-container {
+  z-index: 1050; /* ou qualquer valor maior que o z-index do modal */
+}
